2016-04-29 login function finished

--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -14,6 +14,6 @@
         <attr name="border_overlay" format="boolean" />
     </declare-styleable>
     <declare-styleable name="PowerImageView">
-        <attr name="auto_play" format="boolean"/>
+        <attr name="auto_play" format="boolean"></attr>
     </declare-styleable>
 </resources>
